# pyFuppes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  pyfuppes-ci.yml  pyfuppes-tests.yml  python-package.yml
docs/: Makefile  conf.py  make.bat
pyfuppes/: __init__.py  avgbinmap.py  filter.py  filters.py  geo.py  interpolate.py  misc.py  monotonicity.py  na1001.py  numberstring.py  plottools.py  signalsteps.py  timeconversion.py  timecorr.py  txt2dict.py  v25.py  v25tools.py
pyfuppes/na1001_backend/: nasa_ames_1001_rw.py  nasa_ames_1001_tools.py
pyfuppes/na1001_helpers/: nasa_ames_1001_rw.py  nasa_ames_1001_tools.py
pyfuppes/utils/: nasa_ames_1001_rw.py  nasa_ames_1001_tools.py
pyfuppes/v25_config/: v25_data_cfg.toml
src/: plottools.py  v25.py
src/pyfuppes/: avgbinmap.py  carfiletools.py  filtersmooth.py  geo.py  na1001.py  numberstring.py  plottools.py  timeconversion.py  timecorr.py  txt2dict.py
src/pyfuppes/na1001_helpers/: nasa_ames_1001_rw.py  nasa_ames_1001_tools.py
src/pyfuppes/tests/: test_timeconversion.py  test_timecorr.py
tests/: test_avgbin.py  test_filters.py  test_geo.py  test_interpolate.py  test_misc.py  test_na1001.py  test_numberstring.py  test_timeconversion.py  test_timecorr.py  test_txt2dict.py  test_v25.py
tests/test_input/validate_na/: OM_20200304_591_CPT_MUC_V01_invalid0.txt  OM_20200304_591_CPT_MUC_V01_invalid1.txt  OM_20200304_591_CPT_MUC_V01_invalid2.txt  OM_20200304_591_CPT_MUC_V01_invalid3.txt  OM_20200304_591_CPT_MUC_V01_invalid4.txt  OM_20200304_591_CPT_MUC_V01_invalid5.txt  OM_20200304_591_CPT_MUC_V01_invalid6.txt  OM_20200304_591_CPT_MUC_V01_invalid7.txt  OM_20200304_591_CPT_MUC_V01_invalid8.txt  OM_20200304_591_CPT_MUC_V01_invalid9.txt  OM_20200304_591_CPT_MUC_V01_valid0.txt  OM_20200304_591_CPT_MUC_V01_valid1.txt  fail_cases.md
